--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ dj-database-url==0.5.0
 Django==2.1
 django-autocomplete-light==3.3.4
 django-bootstrap3==11.0.0
+django-crispy-forms==1.7.2
 django-filter==2.1.0
 django-heroku==0.3.1
 docker-py==1.10.6
